dzil: disable Twitter plugin

--- a/dist.ini
+++ b/dist.ini
@@ -1,40 +1,39 @@
-name    = Array-Find
-version = 0.05
-author  = Steven Haryanto <stevenharyanto@gmail.com>
-license = Perl_5
-copyright_holder = Steven Haryanto
+name=Array-Find
+version=0.05
+author=Steven Haryanto <stevenharyanto@gmail.com>
+license=Perl_5
+copyright_holder=Steven Haryanto
 
 [MetaResources]
-homepage    = http://search.cpan.org/dist/Array-Find/
-repository  = http://github.com/sharyanto/perl-Array-Find
+homepage=http://search.cpan.org/dist/Array-Find/
+repository=http://github.com/sharyanto/perl-Array-Find
 
 [@Filter]
-bundle = @Classic
-remove = MakeMaker
-remove = PodVersion
+bundle=@Classic
+remove=MakeMaker
+remove=PodVersion
+
 [ModuleBuild]
 
 [ReadmeFromPod]
+
 [PodWeaver]
+
 [CheckChangeLog]
 
 [CompileTests]
+
 [InstallRelease]
-install_command = cpanm -n .
-[Twitter]
-hash_tags = #perl #cpan
-url_shortener = Metamark
+install_command=cpanm -n .
 
 ;[@Git]
-
 [Prereqs]
 ; for testing
-Test::More         = 0.96
-
+Test::More=0.96
 ; for runtime
-perl               = 5.010000
-List::Util         = 0
+perl=5.010000
+List::Util=0
 
 [Run::Release]
 ;notexist_fatal = 0
-run = archive-perl-release %s
+run=archive-perl-release %s
