dzil: Replace PkgVersion with OurPkgVersion, avoid line number change; Replace Sub::Spec with Rinci

--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,9 @@ repository=http://github.com/sharyanto/perl-Array-Find
 bundle=@Classic
 remove=MakeMaker
 remove=PodVersion
+remove=PkgVersion
+
+[OurPkgVersion]
 
 [ModuleBuild]
 
@@ -28,9 +31,13 @@ install_command=cpanm -n .
 
 ;[@Git]
 [Prereqs]
-; for testing
+;spec
+Rinci=1.1.0
+
+;testing
 Test::More=0.96
-; for runtime
+
+;runtime
 perl=5.010000
 List::Util=0
 
