--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,6 @@
+version=0.07
+
 name=Array-Find
-version=0.06
 author=Steven Haryanto <stevenharyanto@gmail.com>
 license=Perl_5
 copyright_holder=Steven Haryanto
@@ -8,39 +9,14 @@ copyright_holder=Steven Haryanto
 homepage=http://search.cpan.org/dist/Array-Find/
 repository=http://github.com/sharyanto/perl-Array-Find
 
-[@Filter]
-bundle=@Classic
-remove=MakeMaker
-remove=PodVersion
-remove=PkgVersion
+[@SHARYANTO]
 
-[OurPkgVersion]
+[Prereqs / TestRequires]
+Test::More=0.96
 
-[ModuleBuild]
-
-[ReadmeFromPod]
-
-[PodWeaver]
-
-[CheckChangeLog]
-
-[Test::Compile]
-
-[InstallRelease]
-install_command=cpanm -n .
-
-;[@Git]
 [Prereqs]
 ;spec
 Rinci=1.1.0
 
-;testing
-Test::More=0.96
-
-;runtime
 perl=5.010000
 List::Util=0
-
-[Run::Release]
-;notexist_fatal = 0
-run=archive-perl-release %s
