dist: Pass lint-prereqs (2)

--- a/dist.ini
+++ b/dist.ini
@@ -15,8 +15,7 @@ repository=http://github.com/sharyanto/perl-Array-Find
 Test::More=0.98
 
 [Prereqs]
-;spec
+;!lint-prereqs assume-used # spec
 Rinci=1.1.0
 
 perl=5.010001
-List::Util=0
