--- a/dist.ini
+++ b/dist.ini
@@ -1,15 +1,12 @@
 version=0.07
 
 name=Array-Find
-author=Steven Haryanto <stevenharyanto@gmail.com>
-license=Perl_5
-copyright_holder=Steven Haryanto
 
 [MetaResources]
 
 
 
-[@Author::SHARYANTO]
+[@Author::PERLANCAR]
 :version=0.23
 
 [Prereqs / TestRequires]
