--- a/dist.ini
+++ b/dist.ini
@@ -2,10 +2,6 @@ version=0.07
 
 name=Array-Find
 
-[MetaResources]
-
-
-
 [@Author::PERLANCAR]
 :version=0.23
 
@@ -13,7 +9,8 @@ name=Array-Find
 Test::More=0.98
 
 [Prereqs]
+perl=5.010001
+
+[Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used # spec
 Rinci=1.1.0
-
-perl=5.010001
