--- a/dist.ini
+++ b/dist.ini
@@ -17,6 +17,5 @@ warnings=0
 Exporter=0
 List::Util=0
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.0
+[Prereqs / DevelopSuggests]
+_SPEC::Rinci=1.1.0
