--- a/dist.ini
+++ b/dist.ini
@@ -17,5 +17,7 @@ warnings=0
 Exporter=0
 List::Util=0
 
-[Prereqs / DevelopSuggests]
-_SPEC::Rinci=1.1.0
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.0
